--- a/_columns/Stock_Of_the_Day/zh-cn/2024-10-10.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-10-10.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  How Samsara, IBD Stock Of The Day, Targeted Non-Vehicle Market With New 'Asset Tag' Devices
+  How Samsara, IBD Stock Of The Day, Targeted Non-Vehicle Market With New 'Asset Tag' Devices	当今 IBD 股票 Samsara 如何使用新的“资产标签”设备瞄准非汽车市场
 image: /assets/img/stock-of-the-day/2024-10-10.jpg
 date: 2024-10-10 12:13 -0700
 author: REINHARDT KRAUSE
@@ -12,109 +12,137 @@ author: REINHARDT KRAUSE
 
 
 
-**Samsara** ([IOT](https://research.investors.com/quote.aspx?symbol=IOT)) is the [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/) as shares find support at a key technical level after a big run-up. Samsara stock has gained nearly 50% in 2024.
+**Samsara** ([IOT](https://research.investors.com/quote.aspx?symbol=IOT)) is the [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/) as shares find support at a key technical level after a big run-up. Samsara stock has gained nearly 50% in 2024.  
+**Samsara** （[IOT](https://research.investors.com/quote.aspx?symbol=IOT)） 是[当今的 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为股票在大幅上涨后在关键技术层面获得支撑。Samsara 股票在 50 年上涨了近 2024%。
 
 
-On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), Samsara stock rose 5.6% to close at 50.61. Thursday's gain took out its intraday 52-week high of 50.07.
+On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), Samsara stock rose 5.6% to close at 50.61. Thursday's gain took out its intraday 52-week high of 50.07.  
+[今日股市](https://www.investors.com/news/stock-market-today-stock-market-news/?)上，Samsara 股价上涨 5.6%，收于 50.61。周四的涨幅突破了 52 周盘中高点 50.07。
 
 
 
 
-Samsara reached that high on Sept. 25. It retreated a bit after that, but found support at its [21-day moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).
+Samsara reached that high on Sept. 25. It retreated a bit after that, but found support at its [21-day moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).  
+轮回在 9 月 25 日达到了这个高点。此后它略有回落，但在 [21 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)找到支撑。
 
 
-Founded in 2015, Samsara provides sensors and cloud-based software to manage vehicle fleets and industrial operations. Also, its Internet of Things platform provides global positioning tracking for trucks, and monitors routes and vehicle performance.
+Founded in 2015, Samsara provides sensors and cloud-based software to manage vehicle fleets and industrial operations. Also, its Internet of Things platform provides global positioning tracking for trucks, and monitors routes and vehicle performance.  
+Samsara 成立于 2015 年，提供传感器和基于云的软件来管理车队和工业运营。此外，其 Internet of Things 平台为卡车提供全球定位跟踪，并监控路线和车辆性能。
 
 
-Samsara Stock: Founders
------------------------
+Samsara Stock: Founders Samsara 股票：创始人
+--------------------------------------
 
 
-Sanjit Biswas and John Bicket co-founded Samsara in 2015. Earlier they founded Meraki, a Wi-Fi and cloud networking startup. They sold Meraki to **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) for $1.2 billion in 2012.
+Sanjit Biswas and John Bicket co-founded Samsara in 2015. Earlier they founded Meraki, a Wi-Fi and cloud networking startup. They sold Meraki to **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) for $1.2 billion in 2012.  
+Sanjit Biswas 和 John Bicket 于 2015 年共同创立了 Samsara。早些时候，他们创立了 Meraki，这是一家 Wi-Fi 和云网络初创公司。2012 年，他们以 12 亿美元的价格将 Meraki 出售给 **Cisco Systems** （[CSCO）。](https://research.investors.com/quote.aspx?symbol=CSCO)
 
 
-Samsara began by selling fleet management software in the transportation industry. By leveraging its Global Positioning System technology along with telematics — sensor data gathered from trucks — Samsara eventually helped customers monitor routes and vehicle performance. That helped them save money on preventive maintenance and fuel usage.
+Samsara began by selling fleet management software in the transportation industry. By leveraging its Global Positioning System technology along with telematics — sensor data gathered from trucks — Samsara eventually helped customers monitor routes and vehicle performance. That helped them save money on preventive maintenance and fuel usage.  
+Samsara 最初在运输行业销售车队管理软件。通过利用其全球定位系统技术以及远程信息处理（从卡车收集的传感器数据），Samsara 最终帮助客户监控路线和车辆性能。这帮助他们节省了预防性维护和燃料使用方面的资金。
 
 
-From there, Samsara in 2018 expanded into video-based safety products. Further, these enabled fleet customers to lower vehicle insurance costs.
+From there, Samsara in 2018 expanded into video-based safety products. Further, these enabled fleet customers to lower vehicle insurance costs.  
+从那时起，Samsara 于 2018 年扩展到基于视频的安全产品。此外，这些使车队客户能够降低车辆保险成本。
 
 
-In-cab, dual-facing cameras provide real-time video streaming. Also, artificial intelligence software at cloud data centers detects high-risk behavior, such as distracted driving and lane departure.
+In-cab, dual-facing cameras provide real-time video streaming. Also, artificial intelligence software at cloud data centers detects high-risk behavior, such as distracted driving and lane departure.  
+驾驶室内的双面摄像头提供实时视频流。此外，云数据中心的人工智能软件可以检测高风险行为，例如分心驾驶和车道偏离。
 
 
 Samsara Stock: Asset Tags A Hit
 -------------------------------
 
 
-Many analysts are upbeat about new "asset tags" introduced at an investor conference in June.
+Many analysts are upbeat about new "asset tags" introduced at an investor conference in June.  
+许多分析师对 6 月份投资者会议上引入的新“资产标签”持乐观态度。
 
 
-BMO Capital Markets analyst Daniel Jester said in a report to clients: "Newly announced Asset Tags extend the company's opportunity beyond vehicle and asset gateways for customers to track a vast assortment of smaller, nonpowered assets ubiquitous inside industrial organizations in a way which will be supportive to Samsara's gross margins."
+BMO Capital Markets analyst Daniel Jester said in a report to clients: "Newly announced Asset Tags extend the company's opportunity beyond vehicle and asset gateways for customers to track a vast assortment of smaller, nonpowered assets ubiquitous inside industrial organizations in a way which will be supportive to Samsara's gross margins."  
+BMO Capital Markets 分析师 Daniel Jester 在给客户的一份报告中表示：“新发布的 Asset Tags 将公司的机会扩展到车辆和资产网关之外，让客户可以跟踪工业组织内无处不在的各种小型非动力资产，这将支持 Samsara 的毛利率。
 
 
-In the quarter ending Aug. 3, the asset tags generated $1 million in annual contract value.
+In the quarter ending Aug. 3, the asset tags generated $1 million in annual contract value.  
+在截至 8 月 3 日的季度中，资产标签产生了 100 万美元的年度合同价值。
 
 
-"Assuming an effective price of $5 per device, the $1 million in net new ACV in Q2 implies 200,000 devices sold," said Morgan Stanley analyst Keith Weiss in a report.
+"Assuming an effective price of $5 per device, the $1 million in net new ACV in Q2 implies 200,000 devices sold," said Morgan Stanley analyst Keith Weiss in a report.  
+“假设每台设备的有效价格为 5 美元，第二季度 100 万美元的净新 ACV 意味着售出 200,000 台设备，”摩根士丹利分析师 Keith Weiss 在一份报告中表示。
 
 
-Growing Non-Vehicle Market
---------------------------
+Growing Non-Vehicle Market不断增长的非汽车市场
+------------------------------------
 
 
-William Blair analyst Dylan Becker said in a report: "Samsara continues to see notable momentum across its growing suite of non-vehicle-based offerings like asset tags, equipment monitoring, site visibility, connected workflows, and training. With many customers allocating eight-figures-plus annually toward missing and stolen assets, we believe asset tags provide another opportunity for Samsara to deliver substantial tangible value to customers."
+William Blair analyst Dylan Becker said in a report: "Samsara continues to see notable momentum across its growing suite of non-vehicle-based offerings like asset tags, equipment monitoring, site visibility, connected workflows, and training. With many customers allocating eight-figures-plus annually toward missing and stolen assets, we believe asset tags provide another opportunity for Samsara to deliver substantial tangible value to customers."  
+William Blair 分析师 Dylan Becker 在一份报告中表示：“Samsara 在其不断增长的非基于车辆的产品套件中继续看到显着的势头，例如资产标签、设备监控、现场可见性、互联工作流程和培训。由于许多客户每年为丢失和被盗的资产分配八位数以上的资金，我们相信资产标签为 Samsara 提供了另一个机会，可以为客户提供实质性的有形价值。
 
 
-Samsara's second-quarter earnings and revenue topped Wall Street targets amid strong growth in large accounts.
+Samsara's second-quarter earnings and revenue topped Wall Street targets amid strong growth in large accounts.  
+在大客户强劲增长的情况下，Samsara 第二季度的收益和收入超过了华尔街的目标。
 
 
-Samsara reported earnings of 5 cents per share on an adjusted basis versus a 1-cent profit a year earlier. Meanwhile, Q2 revenue rose 37% to $300 million, the company said.
+Samsara reported earnings of 5 cents per share on an adjusted basis versus a 1-cent profit a year earlier. Meanwhile, Q2 revenue rose 37% to $300 million, the company said.  
+Samsara 报告称，调整后每股收益为 5 美分，而去年同期为 1 美分。与此同时，该公司表示，第二季度收入增长 37% 至 3 亿美元。
 
 
-Analysts expected Samsara to record 1 cent profit on sales of $289.5 million.
+Analysts expected Samsara to record 1 cent profit on sales of $289.5 million.  
+分析师预计 Samsara 将以 2.895 亿美元的销售额创下 1 美分的利润。
 
 
-Further, annual recurring revenue from subscriptions rose 36% to $1.26 billion, topping estimates of $1.25 billion.
+Further, annual recurring revenue from subscriptions rose 36% to $1.26 billion, topping estimates of $1.25 billion.  
+此外，订阅的年度经常性收入增长 36% 至 12.6 亿美元，高于 12.5 亿美元的预期。
 
 
-Samsara Stock Technical Ratings
--------------------------------
+Samsara Stock Technical RatingsSamsara Stock 技术评级
+-------------------------------------------------
 
 
-Samsara stock holds an IBD Composite Rating of 97 out of a best-possible 99, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-samsara-iot.aspx).
+Samsara stock holds an IBD Composite Rating of 97 out of a best-possible 99, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-samsara-iot.aspx).  
+根据 [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-samsara-iot.aspx) 的数据，Samsara 股票的 IBD 综合评级为 97 分（满分 99 分）。
 
 
-IBD's Composite Rating combines five separate proprietary ratings into one easy-to-use rating. Also, the best growth stocks have a Composite Rating of 90 or better.
+IBD's Composite Rating combines five separate proprietary ratings into one easy-to-use rating. Also, the best growth stocks have a Composite Rating of 90 or better.  
+IBD 的综合评级将五个独立的专有评级合并为一个易于使用的评级。此外，最好的成长型股票的综合评级为 90 或更高。
 
 
-Further, Samsara stock has an Accumulation/Distribution Rating of B+. That rating analyzes price and volume changes in a stock over the past 13 weeks of trading. Its current rating indicates more funds are buying than selling.
+Further, Samsara stock has an Accumulation/Distribution Rating of B+. That rating analyzes price and volume changes in a stock over the past 13 weeks of trading. Its current rating indicates more funds are buying than selling.  
+此外，Samsara 股票的累积/派发评级为 B+。该评级分析了过去 13 周交易期间股票的价格和成交量变化。其目前的评级表明，买入的基金多于卖出的基金。
 
 
-The rating, on an A+ to E scale, measures institutional buying and selling in a stock. A+ signifies heavy institutional buying; E means heavy selling. Think of the C grade as neutral.
+The rating, on an A+ to E scale, measures institutional buying and selling in a stock. A+ signifies heavy institutional buying; E means heavy selling. Think of the C grade as neutral.  
+该评级采用 A+ 到 E 的等级，衡量机构对股票的买卖。A+ 表示机构大量购买;E 表示重卖。将 C 级视为中性。
 
 
-*Follow Reinhardt Krause on Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech) for updates on artificial intelligence, cybersecurity and cloud computing.*
+*Follow Reinhardt Krause on Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech) for updates on artificial intelligence, cybersecurity and cloud computing.  
+在 Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech) 上关注 Reinhardt Krause，了解有关人工智能、网络安全和云计算的最新信息。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Learn The Best Trading Rules At Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Learn The Best Trading Rules At Investor's Corner  
+在 Investor's Corner 学习最佳交易规则](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[Want To Trade Options? Try Out These Strategies](https://www.investors.com/ibd-videos/videos/want-to-trade-options-here-are-the-basics-to-get-you-started)
+[Want To Trade Options? Try Out These Strategies  
+想要交易期权？试试这些策略](https://www.investors.com/ibd-videos/videos/want-to-trade-options-here-are-the-basics-to-get-you-started)
 
 
-[Monitor IBD's "Breaking Out Today" List For Companies Hitting New Buy Points](https://www.investors.com/ibd-indexes/ibd-breakout-stocks-index/)
+[Monitor IBD's "Breaking Out Today" List For Companies Hitting New Buy Points  
+监控 IBD 的“今日突破”名单，寻找达到新买入点的公司](https://www.investors.com/ibd-indexes/ibd-breakout-stocks-index/)
 
 
-[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today  
+IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Catch The Next Big Winning Stock With MarketSurge](https://www.investors.com/product/marketsmith/?artProdLink=MarketSmith)
+[Catch The Next Big Winning Stock With MarketSurge  
+通过 MarketSurge 捕捉下一只大赢家股票](https://www.investors.com/product/marketsmith/?artProdLink=MarketSmith)
 
 
-[Stocks 'Pause' On Fed Fears; Tesla Robotaxi On Tap](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-robotaxi-event-fed-fears/)
+[Stocks 'Pause' On Fed Fears; Tesla Robotaxi On Tap  
+股市因对美联储的担忧而“暂停”;特斯拉 Robotaxi 水龙头](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-robotaxi-event-fed-fears/)
 
 
 
