--- a/_columns/The_Big_Picture/zh-cn/2024-10-10.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-10.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Falls After Hot Inflation Data; Broadcom, Viking Near Buy Points
+  Stock Market Falls After Hot Inflation Data; Broadcom, Viking Near Buy Points	火热的通胀数据后股市下跌;Broadcom， Viking 靠近 Buy Points
 date: 2024-10-10 17:12 -0700
 author: SCOTT LEHTONEN
 ---
@@ -10,30 +10,38 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market finished modestly lower Thursday, as Wall Street reacted to a hotter-than-expected consumer inflation report, along with a surprise spike in weekly unemployment claims. Up next, producer inflation data is due Friday that could have implications on Federal Reserve rate policy.
+The stock market finished modestly lower Thursday, as Wall Street reacted to a hotter-than-expected consumer inflation report, along with a surprise spike in weekly unemployment claims. Up next, producer inflation data is due Friday that could have implications on Federal Reserve rate policy.  
+股市周四小幅收低，因为华尔街对高于预期的消费者通胀报告以及每周申请失业救济人数意外飙升做出反应。接下来，生产者通胀数据将于周五公布，这可能会对美联储的利率政策产生影响。
 
 
 
 
-The Dow Jones Industrial Average fell more than 0.1%, while the S&P 500 dipped 0.2% and the Nasdaq composite inched lower. The small-cap Russell 2000 index declined nearly 0.6%.
+The Dow Jones Industrial Average fell more than 0.1%, while the S&P 500 dipped 0.2% and the Nasdaq composite inched lower. The small-cap Russell 2000 index declined nearly 0.6%.  
+道琼斯工业平均指数下跌超过 0.1%，而标准普尔 500 指数下跌 0.2%，纳斯达克综合指数小幅走低。小盘股罗素 2000 指数下跌近 0.6%。
 
 
-Volume rose on the Nasdaq but fell on the New York Stock Exchange from Wednesday's session.
+Volume rose on the Nasdaq but fell on the New York Stock Exchange from Wednesday's session.  
+纳斯达克的成交量从周三开始上升，但纽约证券交易所的成交量下降。
 
 
-Eight of the 11 S&P 500 sectors ended lower, with real estate and communication services leading the downside. The energy sector was the clear leader Thursday, as oil prices rallied 3.7%. West Texas intermediate futures settled just below $76 per barrel.
+Eight of the 11 S&P 500 sectors ended lower, with real estate and communication services leading the downside. The energy sector was the clear leader Thursday, as oil prices rallied 3.7%. West Texas intermediate futures settled just below $76 per barrel.  
+标准普尔 500 指数的 11 个板块中有 8 个板块收低，其中房地产和通信服务领跌。能源板块周四明显领跑，油价上涨 3.7%。西德克萨斯中质原油期货收于每桶 76 美元以下。
 
 
-Ahead of Thursday's stock market open, [consumer price index data](https://www.investors.com/news/economy/cpi-inflation-september-jobless-claims-federal-reserve-sp-500/) for September showed that core inflation ran hotter than expected, but new claims for unemployment benefits unexpectedly surged in the first week of October.
+Ahead of Thursday's stock market open, [consumer price index data](https://www.investors.com/news/economy/cpi-inflation-september-jobless-claims-federal-reserve-sp-500/) for September showed that core inflation ran hotter than expected, but new claims for unemployment benefits unexpectedly surged in the first week of October.  
+在周四股市开盘前，9 月[消费者价格指数数据](https://www.investors.com/news/economy/cpi-inflation-september-jobless-claims-federal-reserve-sp-500/)显示，核心通胀高于预期，但 10 月第一周新申请失业救济人数意外激增。
 
 
-In response, [odds of a 25-basis-point rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) at the next Fed meeting increased to 84.9%, vs. 80.3% one day ago and 67.9% one week ago.
+In response, [odds of a 25-basis-point rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) at the next Fed meeting increased to 84.9%, vs. 80.3% one day ago and 67.9% one week ago.  
+作为回应，美联储下次会议[降息 25 个基点的几率](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html)上升至 84.9%，而一天前为 80.3%，一周前为 67.9%。
 
 
-Meanwhile, the 10-year Treasury yield climbed to its highest level since July 31, closing at 4.09%.
+Meanwhile, the 10-year Treasury yield climbed to its highest level since July 31, closing at 4.09%.  
+与此同时，10 年期美国国债收益率攀升至 7 月 31 日以来的最高水平，收于 4.09%。
 
 
-Up next, the Labor Department's producer price index is due out Friday morning. That may influence the Fed rate-cut outlook.
+Up next, the Labor Department's producer price index is due out Friday morning. That may influence the Fed rate-cut outlook.  
+接下来报导，美国劳工部的生产者价格指数将于周五上午公布。这可能会影响美联储的降息前景。
 
 
 
@@ -41,7 +49,8 @@ Up next, the Labor Department's producer price index is due out Friday morning. 
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Market  
+英伟达、苹果和特斯拉强调如何应对这一市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
 
@@ -49,47 +58,47 @@ Up next, the Labor Department's producer price index is due out Friday morning. 
 ---
 
 
-Dow Jones Winners And Losers
-----------------------------
+Dow Jones Winners And Losers道琼斯赢家和输家
+------------------------------------
 
 
-In the Dow Jones index, **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) were the biggest gainers Thursday with rises of 1.1% and 0.8%, respectively.
+In the Dow Jones index, **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) were the biggest gainers Thursday with rises of 1.1% and 0.8%, respectively.  
+在道琼斯指数中，**UnitedHealth Group** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 和 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 周四涨幅最大，分别上涨 1.1% 和 0.8%。
 
 
-On the downside, **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) were the biggest losers during the session, down 1.8% and 1.5%, respectively.
+On the downside, **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) were the biggest losers during the session, down 1.8% and 1.5%, respectively.  
+不利的一面是，**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 和**家得宝** （[HD](https://research.investors.com/quote.aspx?symbol=HD)） 是盘中最大的输家，分别下跌 1.8% 和 1.5%。
 
 
-[The Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply mixed as the Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund edged higher. Notably, Mag 7 stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) is approaching a record high. And **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) is building a cup with handle that displays a 264.86 entry. The electric-vehicle giant is due to [unveil its robotaxi](https://www.investors.com/news/tesla-robotaxi-event-elon-musk-tesla-stock/) on Thursday evening.
+[The Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply mixed as the Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund edged higher. Notably, Mag 7 stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) is approaching a record high. And **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) is building a cup with handle that displays a 264.86 entry. The electric-vehicle giant is due to [unveil its robotaxi](https://www.investors.com/news/tesla-robotaxi-event-elon-musk-tesla-stock/) on Thursday evening.  
+随着 Roundhill Magnificent Seven （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 交易所交易基金小幅走高，[Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)收盘涨跌互现。值得注意的是，Mag 7 股票 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 正在接近历史新高。**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 正在制造一个带手柄的 cup with handle，显示 264.86 条目。这家电动汽车巨头将于周四晚上[推出其自动驾驶出租车](https://www.investors.com/news/tesla-robotaxi-event-elon-musk-tesla-stock/)。
 
 
-The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund dropped 1.3% Thursday. In Investor's Business Daily [IBD 50](https://research.investors.com/stock-lists/ibd-50/) list, **ADMA Biologics** ([ADMA](https://research.investors.com/quote.aspx?symbol=ADMA)) plunged after the [company's auditor unexpectedly resigned](https://www.investors.com/news/technology/adma-stock-auditor-resigns/).
+The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund dropped 1.3% Thursday. In Investor's Business Daily [IBD 50](https://research.investors.com/stock-lists/ibd-50/) list, **ADMA Biologics** ([ADMA](https://research.investors.com/quote.aspx?symbol=ADMA)) plunged after the [company's auditor unexpectedly resigned](https://www.investors.com/news/technology/adma-stock-auditor-resigns/).  
+Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金周四下跌 1.3%。在《投资者商业日报》的 [IBD 50](https://research.investors.com/stock-lists/ibd-50/) 强名单中，**ADMA Biologics** （[ADMA）](https://research.investors.com/quote.aspx?symbol=ADMA) 在[公司审计师意外辞](https://www.investors.com/news/technology/adma-stock-auditor-resigns/)职后暴跌。
 
 
-What To Do Now
---------------
+What To Do Now 现在该做什么
+---------------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/10/MP101024.jpg)
 
 
-Despite Thursday's mild losses, the Nasdaq and S&P 500 continue to perform well, and IBD has an 80%-100% recommended exposure threshold. As buying opportunities continue to expand, that means it's time to be aggressively invested and adding to your portfolio.
+Despite Thursday's mild losses, the Nasdaq and S&P 500 continue to perform well, and IBD has an 80%-100% recommended exposure threshold. As buying opportunities continue to expand, that means it's time to be aggressively invested and adding to your portfolio.  
+尽管周四小幅下跌，但纳斯达克和标准普尔 500 指数继续表现良好，IBD 的推荐风险阈值为 80%-100%。随着购买机会不断扩大，这意味着是时候积极投资并增加您的投资组合了。
 
 
-Also, you can always rotate out of positions that aren't working and move resources to new opportunities.
+Also, you can always rotate out of positions that aren't working and move resources to new opportunities.  
+此外，您始终可以轮换出不起作用的职位，并将资源转移到新的业务机会中。
 
 
-The current stock market environment still requires [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. Watch for sell signals and other abrupt character changes in your holdings.
+The current stock market environment still requires [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. Watch for sell signals and other abrupt character changes in your holdings.  
+当前的股票市场环境仍然需要[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。观察您持有的资产中的卖出信号和其他突然的特征变化。
 
 
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured two new stocks. Notably, **Shake Shack** ([SHAK](https://research.investors.com/quote.aspx?symbol=SHAK)) attempted to surpass a 111.17 cup-with-handle entry. Meanwhile, there are 12 ideas appearing on MarketSurge's Near Pivot list. That suggests that there are potential buying opportunities ready to emerge.
-
-
-
-
----
-
-
-[**Close, But No 'Perfect' Cigar For Nvidia, Broadcom. But Kudos To These 22 Gems.**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)'s Breaking Out Today list featured two new stocks. Notably, **Shake Shack** ([SHAK](https://research.investors.com/quote.aspx?symbol=SHAK)) attempted to surpass a 111.17 cup-with-handle entry. Meanwhile, there are 12 ideas appearing on MarketSurge's Near Pivot list. That suggests that there are potential buying opportunities ready to emerge.  
+[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 的 Breaking Out Today 名单中出现了两只新股。值得注意的是，**Shake Shack** （[SHAK](https://research.investors.com/quote.aspx?symbol=SHAK)） 试图超过 111.17 的带把手杯子条目。同时，MarketSurge 的 Near Pivot 列表中出现了 12 个想法。这表明有潜在的买入机会即将出现。
 
 
 
@@ -97,44 +106,63 @@ The current stock market environment still requires [risk management](https://ww
 ---
 
 
-Stock Market Leaders: Broadcom, Morgan Stanley, Viking
-------------------------------------------------------
-
-
-Amid the stock market action, leaders to watch include **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)), **Morgan Stanley** ([MS](https://research.investors.com/quote.aspx?symbol=MS)) and **Viking** ([VIK](https://research.investors.com/quote.aspx?symbol=VIK)).
-
-
-
-Broadcom is attempting to break out past a 185.16 buy point in a cup base, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition.
-
-
-Investment bank Morgan Stanley closed just below a 109.11 buy point. And [IBD Leaderboard stock](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) and cruise line operator Viking is in a buy range above a 37.25 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/).
-
-
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_101024.pdf)
-
-
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
+[**Close, But No 'Perfect' Cigar For Nvidia, Broadcom. But Kudos To These 22 Gems.  
+接近，但没有 Nvidia、Broadcom 的“完美”雪茄。但要向这 22 颗宝石致敬。**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
 
-**YOU MAY ALSO LIKE:**
+---
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+Stock Market Leaders: Broadcom, Morgan Stanley, Viking股票市场领导者：Broadcom、Morgan Stanley、Viking
+--------------------------------------------------------------------------------------------
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+Amid the stock market action, leaders to watch include **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)), **Morgan Stanley** ([MS](https://research.investors.com/quote.aspx?symbol=MS)) and **Viking** ([VIK](https://research.investors.com/quote.aspx?symbol=VIK)).  
+在股市走势中，值得关注的领导者包括**博通** （[AVGO）、](https://research.investors.com/quote.aspx?symbol=AVGO)**摩根士丹利** （[MS](https://research.investors.com/quote.aspx?symbol=MS)） 和**维京** （[VIK](https://research.investors.com/quote.aspx?symbol=VIK)）。
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+Broadcom is attempting to break out past a 185.16 buy point in a cup base, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition.  
+根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 模式识别，博通正试图突破杯底的 185.16 买入点。
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+Investment bank Morgan Stanley closed just below a 109.11 buy point. And [IBD Leaderboard stock](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) and cruise line operator Viking is in a buy range above a 37.25 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/).  
+投资银行摩根士丹利收盘价略低于 109.11 买入点。[IBD Leaderboard 股票](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)和邮轮运营商 Viking 处于 37.25 [买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)上方的买入区间。
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_101024.pdf)
+
+
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
+请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+
+
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
+查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
+在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+
+
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
